--- a/src/main/resources/templates/inquiry/confirm.html
+++ b/src/main/resources/templates/inquiry/confirm.html
@@ -12,16 +12,19 @@
 <div th:object="${inquiryForm}">
   <p th:text="*{name}"></p>
   <p th:text="*{email}"></p>
+  <p th:text="*{tel}"></p>
   <p th:text="*{contents}"></p>
   <form method="post" action="#" th:action="@{/inquiry/form}">
     <input type="hidden" name="name" th:value="*{name}">
     <input type="hidden" name="email" th:value="*{email}">
+    <input type="hidden" name="email" th:value="*{tel}">
     <input type="hidden" name="contents" th:value="*{contents}">
     <input type="submit" value="Go Back">
   </form>
   <form method="post" action="#" th:action="@{/inquiry/complete}">
     <input type="hidden" name="name" th:value="*{name}">
     <input type="hidden" name="email" th:value="*{email}">
+    <input type="hidden" name="email" th:value="*{tel}">
     <input type="hidden" name="contents" th:value="*{contents}">
     <input type="submit" value="Complete">
   </form>
