RestTemplateのサンプル(GET, POST)を追加しました

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,5 +30,16 @@
   <li><a href="/inquiry/index_boot">/inquiry/index_boot: 「/inquiry/index」のbootstrapを利用バージョン</a></li>
 </ul>
 
+<h3>RestTemplateテスト用エンドポイント</h3>
+<ul>
+  <li><a href="/rest/get1">/rest/get1: GETリクエスト(getForObject)</a></li>
+  <li><a href="/rest/get2">/rest/get2: GETリクエスト(getForObject)</a></li>
+  <li><a href="/rest/get3">/rest/get3: GETリクエスト(exchange)</a></li>
+  <li><a href="/rest/get4">/rest/get4: GETリクエスト(exchange {}利用)</a></li>
+  <li><a href="/rest/post1">/rest/post1: POSTリクエスト(postForObject)</a></li>
+  <li><a href="/rest/post2">/rest/post2: POSTリクエスト(postForObject: リクエストをHashMapに詰める)</a></li>
+  <li><a href="/rest/post3">/rest/post3: POSTリクエスト(postForObject: レスポンスをDtoに詰める)</a></li>
+</ul>
+
 </body>
 </html>
